--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@ng-bootstrap/ng-bootstrap": "14.1.1",
     "@ng-select/ng-select": "^12.0.4",
     "@popperjs/core": "^2.11.7",
+    "angular-notifier": "^14.0.0",
     "apexcharts": "^3.40.0",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.10.5",
